installed widget tweaks and floating label module

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <script src="{% static "js/storefront_head.js" %}"></script>
         <link rel="stylesheet" type="text/css" href="{% static "css/storefront.css" %}">
         <link rel="stylesheet" type="text/css" href="{% static "css/callouts.css" %}">
-        <link rel="stylesheet" type="text/css" href="{% static "css/ghostbtn.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/floatlabel.css" %}">
 
         {% block stylesheet %}{% endblock stylesheet %}
 
@@ -145,6 +145,7 @@
         {% endblock %}
         {% block footer_scripts %}
             <script src="{% static "js/storefront.js" %}"></script>
+            <script src="{% static "js/floatlabel.js" %}"></script>
         {% endblock footer_scripts %}
     </body>
 </html>
