--- a/saleor/checkout/templates/checkout/billing.html
+++ b/saleor/checkout/templates/checkout/billing.html
@@ -12,7 +12,7 @@
                 <span class="glyphicon glyphicon-user"></span>
             </div>
           <h4>{% trans "Already have an account?" %}</h4>
-          {% trans "Log in" %}
+          {% trans "Log in to access your address book" %}
         </div>
         </a>
     {% endif %}
