--- a/templates/base.html
+++ b/templates/base.html
@@ -111,14 +111,14 @@
             <div class="row">
                 <div class="col-sm-12">
                     {% block content %}
-                        <div class="jumbotron">
-                          <h1>Flowers On Demand</h1>
-                          <br>
-                          <p><a class="btn btn-default btn-lg" href="#" role="button">Learn more</a></p>
-                        </div>
-                        <div class="row">
-                            {% include "category/_items.html" %}
-                        </div>
+                    <div class="callout-block text-center fade-in-b">
+                        <h1>Flowers Bouquets On Demand</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ad assumenda nisi harum omnis itaque ea accusamus sint numquam nam est quod ab dolorum atque, quisquam exercitationem tempora similique!</p>
+                    </div>
+                    <br>
+                    <div class="row">
+                        {% include "category/_items.html" %}
+                    </div>
                     {% endblock content %}
                 </div>
             </div>
@@ -138,7 +138,6 @@
             <footer>
                 <div class="container">
                     <p class="text-center">
-                        GALLANT 2015
                     </p>
                 </div>
             </footer>
