--- a/saleor/checkout/templates/checkout/summary.html
+++ b/saleor/checkout/templates/checkout/summary.html
@@ -30,12 +30,12 @@
                     {% trans "Delivery time" %}
                 </div>
                 <div class="panel-body">
-                    {% if checkout.delivery_address %}
-                        <address>{% include "userprofile/snippets/address-details.html" with address=checkout.delivery_address %}</address>
+                    {% if checkout.delivery_time %}
+                        <p class="">TIME SLOT</p>
+                        <p><a href="{{ checkout.delivery_time.get_absolute_url }}">{% trans "Change delivery time" %}</a></p>
                     {% else %}
-                        <p class="text-danger">{% trans "No address given yet." %}</p>
+                        <p><a href="{{ checkout.delivery_time.get_absolute_url }}">{% trans "Add delivery time" %}</a></p>
                     {% endif %}
-                    <p><a href="{{ checkout.delivery.get_absolute_url }}">{% trans "Change delivery time" %}</a></p>
                 </div>
             </div>
         </div>
@@ -88,10 +88,22 @@
             <div class="panel-body">
                 {% for item in shipping %}
                     <div class="row">
-                        <div class="col-xs-2"><img class="img-responsive" src=""></div>
-                        <div class="col-xs-4"><h4 class="product-name"><strong>{{ item.product }}</strong></h4><h4><small>{{ item.description }}</small></h4></div>
-                        <div class="col-xs-3 text-right"><h6>{% gross item.get_price_per_item %} {% if item.quantity != 1 %} <span class="text-muted">x</span> {{ item.quantity }}{% endif %}</h6></div>
-                        <div class="col-xs-3 text-right"><h6><strong>{% gross item.get_total %}</strong></h6></div>
+                        <div class="col-xs-2">
+                            {% if item.product.product.images.first %}
+                            <img class="img-responsive" itemprop="image" src="{{ item.product.product.images.first.image.crop.50x50 }}" alt="">
+                            {% else %}
+                            <img class="img responsive" src="{% static 'imagesproduct-image-placeholder.png' %}" alt="">
+                            {% endif %}
+                        </div>
+                        <div class="col-xs-5">
+                            <h4 class="product-name"><strong>{{item.product.image}}{{item.product}}</strong></h4>
+                        </div>
+                        <div class="col-xs-2 text-right">
+                            <h6>{{ item.quantity }} {% if item.quantity != 1 %}<span class="text-muted">x</span>{% endif %} {% gross item.get_price_per_item %}</h6>
+                        </div>
+                        <div class="col-xs-2 text-right">
+                            <h6><strong>{% gross item.get_total %}</strong></h6>
+                        </div>
                     </div>
                 {% endfor %}
                 <hr>
@@ -103,7 +115,7 @@
                         {% if total.tax %}
                             ({% blocktrans with tax=total.tax|floatformat:2 currency=total.currency %}includes {{ tax }} <span class="currency">{{ currency }}</span> tax{% endblocktrans %})
                         {% endif %}
-                        <h4 class="text-right">{% trans "Total" %} <strong>{% gross total_with_shipping %}</strong></h4>
+                        <h4 class="text-right">{% trans "Total" %}: <strong>{% gross total_with_shipping %}</strong></h4>
                     </div>
                     <div class="col-xs-3">
                         {% if all_steps_valid %}
