--- a/saleor/cart/templates/cart/index.html
+++ b/saleor/cart/templates/cart/index.html
@@ -6,6 +6,10 @@
 
 {% block title %}{% trans "Your cart" %} — {{ block.super }}{% endblock %}
 
+{% block jumbo %}
+<br><br>
+{% endblock %}
+
 {% block breadcrumb %}
     {{ block.super }}
 <li><a href="{% url 'cart:index' %}">{% trans "Cart" %}</a></li>
