--- a/saleor/static/scss/_app.scss
+++ b/saleor/static/scss/_app.scss
@@ -3,7 +3,7 @@ $icon-font-path: "../fonts/";
 @import "components-font-awesome/scss/font-awesome";
 
 .navbar {
-	margin-bottom: $grid-gutter-width;
+	margin-bottom: 0;
 }
 
 .price {
