--- a/saleor/checkout/templates/checkout/details.html
+++ b/saleor/checkout/templates/checkout/details.html
@@ -7,13 +7,10 @@
 {% block outerbreadcrumb %}{% endblock %}
 
 {% block header %}
-    <header class="navbar navbar-default navbar-static-top" role="navigation">
-        <nav class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Saleor</a>
-            </div>
-        </nav>
-    </header>
+{% endblock %}
+
+{% block jumbo %}
+<br>
 {% endblock %}
 
 {% block footer %}
