--- a/saleor/checkout/templates/checkout/delivery_time.html
+++ b/saleor/checkout/templates/checkout/delivery_time.html
@@ -10,7 +10,7 @@
 {% endblock fields %}
 
 {% block form_submit %}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-large btn-black btn-outlined">
         {% trans "Delivery at this time" %}
     </button>
 {% endblock %}
