--- a/saleor/checkout/templates/checkout/shipping.html
+++ b/saleor/checkout/templates/checkout/shipping.html
@@ -31,7 +31,7 @@
 {% endblock fields %}
 
 {% block form_submit %}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-large btn-outlined btn-black">
         {% trans "Ship to this address" %}
     </button>
 {% endblock %}
