--- a/saleor/product/templates/product/details.html
+++ b/saleor/product/templates/product/details.html
@@ -89,7 +89,7 @@
                     {{ form|as_vertical_form }}
 
                     <div class="form-group">
-                        <button class="btn btn-lg btn-block btn-primary">
+                        <button class="btn btn-lg btn-block btn-black btn-outlined" data-wow-delay="0.7s">
                             {% trans "Add to cart" %}
                         </button>
                     </div>
