--- a/saleor/registration/templates/registration/request_email_confirmation.html
+++ b/saleor/registration/templates/registration/request_email_confirmation.html
@@ -22,9 +22,7 @@
                         <input type="hidden" name="next" value="{{ next }}" />
                     </fieldset>
                     <div class="form-group text-right">
-                        <button class="btn btn-primary">
-                            {% trans "Continue" %}
-                        </button>
+                        <button class="btn btn-large btn-black btn-outlined">{% trans "Continue" %}</button>
                     </div>
                 </form>
             </div>
