--- a/templates/base.html
+++ b/templates/base.html
@@ -124,20 +124,13 @@
             </div>
             {% endblock outercontent %}
             {% block outerbreadcrumb %}
-            <ul class="breadcrumb" itemprop="breadcrumb">
-                {% block breadcrumb %}
-                <li>
-                    <a href="/">{% trans "Home" %}</a>
-                </li>
-                {% endblock breadcrumb %}
-            </ul>
             {% endblock outerbreadcrumb %}
         </div>
 
         {% block footer %}
             <footer>
                 <div class="container">
-                    <p class="text-center">Hello world</p>
+                    <p class="text-center"></p>
                 </div>
             </footer>
         {% endblock %}
