--- a/saleor/checkout/templates/checkout/billing.html
+++ b/saleor/checkout/templates/checkout/billing.html
@@ -33,7 +33,7 @@
 {% endblock fields %}
 
 {% block form_submit %}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-large btn-outlined btn-black">
         {% trans "Bill to this address" %}
     </button>
 {% endblock %}
