background and stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,10 +103,10 @@
         {% endif %}
 
         {% block jumbo %}
-        <div class="jumbotron">
+        <div class="jumbotron hero-unit">
             <div class="container">
-                <h2>PROJECT GALLANT</h2>
-                <p >Affordable quality flowers. Sourced from California. Created in Sunnyvale. Hand delivered through Silicon Valley. By co-op couriers. With electric bikes and cars. Dispatched by robots. Orders via SMS. On demand.</p>
+                <h2><span class="white_bg">PROJECT GALLANT</span></h2>
+                <p><span class="white_bg">Affordable quality flowers. Sourced from California. Created in Sunnyvale. Hand delivered through Silicon Valley. By co-op couriers. With electric bikes and cars. Dispatched by robots. Orders via SMS. On demand.</span></p>
             </div>
         </div>
         {% endblock %}
