--- a/saleor/static/scss/_app.scss
+++ b/saleor/static/scss/_app.scss
@@ -198,3 +198,13 @@ $icon-font-path: "../fonts/";
 		display: none;
 	}
 }
+
+
+.hero-unit {
+	background-image:url('../images/flowers_bg.jpg');
+  background-size:cover;
+}
+
+.white_bg {
+	background-color: white;
+}
